# daydaycode

./: CMakeLists.txt  README.md  main.cpp
include/: Gun.h  Soldier.h  error_wdm.h  zip_api_wdm.h
src/: CMakeLists.txt  Gun.cpp  Soldier.cpp  zip_api_wdm.cpp
src/zip_wdm/: minizip_wdm.cpp  zip_api_wdm.cpp
testfile/: input.txt
